Correccion de presentacion

--- a/TAREA 2 - JORGE MATIAS OTT/contact.html
+++ b/TAREA 2 - JORGE MATIAS OTT/contact.html
@@ -5,37 +5,33 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css">
-    <title>Home</title>
+    <!-- <link rel="stylesheet" href="stylePropio.css"> -->
+    <title>Contact</title>
   </head>
   <header>
-    <h1>MIGHTY DUCKS HOCKEY LEAGUE</h1>
+    <h1>Mighty Ducks Hockey League</h1>
     <figure>
       <div class="contenedorIMG">
         <img class="banner" src="./IMG/design1_image2.jpg" alt="banner"/>
       </div>
       <img class="logo" src="./IMG/LogoMightyducks-01.png" alt="logo" width="100" />
     </figure>
-    <h2>UPCOMING EVENTS</h2>    
+    <h2>CONTACT</h2>   
   </header>
   <nav>
-    <a class="active" href="#">INICIO</a>
+    <a href="./index.html">INICIO</a>
     <a href="./About _MDHL.html">ABOUT</a>
-    <a href="./contact.html">CONTACT</a>
+    <a class="active" href="#">CONTACT</a>
   </nav>
   <body>
-    <section class="sectionIndex">
+    <section class="sectionContact">
+    <article>
+      <p>Please email us at <a href="mailto:mdhl@chihockey.org?subject=Questions">mdhl@chihockey.org</a>
+      </p>
+    </article>
       <article>
-        <h3>August 4</h3>
-        <p>MDSL Fundraiser</p>
-      </article>
-      <article>
-        <h3>August 16</h3>
-        <p>Season Kick-off: Meet the Teams</p>
-      </article>
-      <article>
-        <h3>September 1</h3>
-        <p>First Game of the Season (Check Game Schedule for details)</p>
-      </article>
-    </section>
+      <p>We reply to your email as soon as we can</p>
+    </article>
+  </section>
   </body>
 </html>
