--- a/TAREA 2 - JORGE MATIAS OTT/About _MDHL.html
+++ b/TAREA 2 - JORGE MATIAS OTT/About _MDHL.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- <link rel="stylesheet" href="style.css"> -->
-    <link rel="stylesheet" href="styleOriginal.css">
+    <link rel="stylesheet" href="style.css">
+    <!-- <link rel="stylesheet" href="stylePropio.css"> -->
     <title>About MDHL</title>
   </head>
   <header>
