--- a/TAREAS - JORGE MATIAS OTT/rulesofplay-policies.html
+++ b/TAREAS - JORGE MATIAS OTT/rulesofplay-policies.html
@@ -53,13 +53,13 @@
       <article>
         <h3>IHF FIELD REGULATIONS</h3>
         <h4>1. DIMENSIONS.</h4>
-        <p>
+        <p class="text-justificado">
           IHF Law 1 provides for flexible external field dimensions within a
           given maximum and minimum width and length. These dimensions should be
           adhered to for all fields used by teams under 12 and older.
         </p>
         <h4>2. COMPETITION FIELDS.</h4>
-        <p>
+        <p class="text-justificado">
           Fields used within the competition program must be a minimum of 100 x
           60 yards.Leagues, districts or associations participating in the state
           competition program that are unable to provide a field that meets
@@ -72,19 +72,22 @@
         </p>
 
         <h4>3. FIELDS USED BY YOUNG AGE GROUPS</h4>
-        <p>
-          a. U-6 play on a field approximately 20 X 40 yards with no penalty
-          areas. Fields for older age groups should be progressively larger. b.
-          U-8 plays on a field 40-50 yards in length and 20-30 yards width. c.
-          U-10 play on a field 70-80 yards in length and 40-50 yards in width.
-          d. In addition, fields used by young age groups may have their
-          internal dimensions and size of goal similarly modified.
+        <p class="text-justificado">
+          <ol>
+            <li>U-6 play on a field approximately 20 X 40 yards with no penalty areas. Fields for older age groups should be progressively larger.</li>
+            <li>U-8 plays on a field 40-50 yards in length and 20-30 yards width.</li>
+            <li>U-10 play on a field 70-80 yards in length and 40-50 yards in width.</li>
+            <li>In addition, fields used by young age groups may have their
+              internal dimensions and size of goal similarly modified.</li>
+          </ol> 
+            
+          
         </p>
       </article>
 
       <article>
         <h3>ALL-PLAY</h3>
-        <p>
+        <p class="text-justificado">
           All-play means that every recreation player on every team shall play
           atleast fifty percent of each game. Coaches in the competition program
           are encouraged to play their players 50% of each game. o A Coach shall
