--- a/TAREAS - JORGE MATIAS OTT/About _MDHL.html
+++ b/TAREAS - JORGE MATIAS OTT/About _MDHL.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css" />
+    <title>ABOUT MDHL</title>
+  </head>
   <body>
-    <head>
-      <meta charset="UTF-8" />
-      <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <link rel="stylesheet" href="style.css" />
-      <title>About MDHL</title>
-    </head>
     <header>
       <h1>MIGHTY DUCKS HOCKEY LEAGUE</h1>
       <figure>
@@ -30,6 +31,7 @@
         <a href="./contact.html">CONTACT</a>
         <a href="./rulesofplay-policies.html">RULES OF PLAY & POLICIES</a>
         <a href="./schedule.htm">SCHEDULE</a>
+        <a href="./registration.html">REGISTRATION</a>
       </nav>
       <section class="contenedor-principal">
         <article>
