--- a/TAREAS - JORGE MATIAS OTT/contact.html
+++ b/TAREAS - JORGE MATIAS OTT/contact.html
@@ -5,8 +5,9 @@
       <meta charset="UTF-8" />
       <meta http-equiv="X-UA-Compatible" content="IE=edge" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
       <link rel="stylesheet" href="style.css" />
-      <title>Contact</title>
+      <title>CONTACT</title>
     </head>
     <header>
       <h1>MIGHTY DUCKS HOCKEY LEAGUE</h1>
@@ -30,6 +31,7 @@
         <a class="active" href="#">CONTACT</a>
         <a href="./rulesofplay-policies.html">RULES OF PLAY & POLICIES</a>
         <a href="./schedule.htm">SCHEDULE</a>
+        <a href="./registration.html">REGISTRATION</a>
       </nav>
       <section class="contenedor-principal">
         <article class="contact">
