--- a/TAREAS - JORGE MATIAS OTT/schedule.htm
+++ b/TAREAS - JORGE MATIAS OTT/schedule.htm
@@ -4,16 +4,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="style.css" />
+    <title>SCHEDULE</title>
   </head>
   <body>
-    <head>
-      <meta charset="UTF-8" />
-      <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <link rel="stylesheet" href="style.css" />
-      <title>About MDHL</title>
-    </head>
     <header>
       <h1>MIGHTY DUCKS HOCKEY LEAGUE</h1>
       <figure>
@@ -36,6 +36,7 @@
         <a href="./contact.html">CONTACT</a>
         <a href="./rulesofplay-policies.html">RULES OF PLAY & POLICIES</a>
         <a class="active" href="#">SCHEDULE</a>
+        <a href="./registration.html">REGISTRATION</a>
       </nav>
       <section class="contenedor-principal">
         <article>
@@ -47,56 +48,156 @@
             <th rowspan="1">Teams</th>
             <th rowspan="1">Location</th>
             <th cdtspan="1">Times</th>
+            <th cdtspan="1">Map</th>
           </tr>
           <tr>
             <td rowspan="2">9/01</td>
             <td>U1 and U4</td>
-            <td>AJ KAtzenmaier</td>
+            <td>AJ Katzenmaier</td>
             <td>9:30 a.m.</td>
+            <td>
+              <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2949.780460828717!2d-87.86703177857865!3d42.32588108844622!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880f932fbc6ba7cd%3A0xcf2bbe275c6da815!2sAJ%20Katzenmaier%20Academy!5e0!3m2!1ses-419!2sar!4v1676681474637!5m2!1ses-419!2sar"
+                width="150"
+                height="100"
+                style="border: 0"
+                allowfullscreen=""
+                loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"
+              ></iframe>
+            </td>
           </tr>
           <tr>
             <td>U3 and U2</td>
             <td>Greenbay</td>
             <td>1:00 a.m.</td>
+            <td>
+              <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d182055.15414505827!2d-88.13058002626626!3d44.5231046314734!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8802e2e809b380f3%3A0x6370045214dcf571!2sGreen%20Bay%2C%20Wisconsin%2C%20EE.%20UU.!5e0!3m2!1ses-419!2sar!4v1676681566816!5m2!1ses-419!2sar"
+                width="150"
+                height="100"
+                style="border: 0"
+                allowfullscreen=""
+                loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"
+              ></iframe>
+            </td>
           </tr>
           <tr>
             <td rowspan="2">9/08</td>
             <td>U5 and U6</td>
             <td>Howard A Yeager</td>
             <td>9:30 a.m.</td>
+            <td>
+              <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2950.2698766737826!2d-87.85606978504094!3d42.31544224591159!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880feccac26b07c5%3A0x8b51fa5d6efe771a!2sHoward%20A.%20Yeager%20School%20(PREK-K)!5e0!3m2!1ses-419!2sar!4v1676681599586!5m2!1ses-419!2sar"
+                width="150"
+                height="100"
+                style="border: 0"
+                allowfullscreen=""
+                loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"
+              ></iframe>
+            </td>
           </tr>
           <tr>
             <td>U6 and U1</td>
             <td>Marjorie P Hart</td>
             <td>1:00 a.m.</td>
+            <td>
+              <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2968.2896536435937!2d-87.64816138505428!3d41.929626870168!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880fd30f2637f9d7%3A0xdbff5d5dfcfcfa35!2sMarjorie%20P%20Hart%20Elementary!5e0!3m2!1ses-419!2sar!4v1676681648134!5m2!1ses-419!2sar"
+                width="150"
+                height="100"
+                style="border: 0"
+                allowfullscreen=""
+                loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"
+              ></iframe>
+            </td>
           </tr>
           <tr>
             <td rowspan="2">9/15</td>
             <td>U2 and U4</td>
             <td>North</td>
             <td>9:30 a.m.</td>
+            <td>
+              <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d47346.41461170454!2d-87.87118710799001!3d42.125652385553394!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880fba351c0abd47%3A0x12f63c61fae9bbb8!2sNorthbrook%2C%20Illinois%2060062%2C%20EE.%20UU.!5e0!3m2!1ses-419!2sar!4v1676681669777!5m2!1ses-419!2sar"
+                width="150"
+                height="100"
+                style="border: 0"
+                allowfullscreen=""
+                loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"
+              ></iframe>
+            </td>
           </tr>
           <tr>
             <td>U3 and U5</td>
             <td>AJ Katzenmaier</td>
             <td>1:00 a.m.</td>
+            <td>
+              <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2949.780458165122!2d-87.86499328504057!3d42.32588114525284!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880f932fbc6ba7cd%3A0xcf2bbe275c6da815!2sAJ%20Katzenmaier%20Academy!5e0!3m2!1ses-419!2sar!4v1676681696869!5m2!1ses-419!2sar"
+                width="150"
+                height="100"
+                style="border: 0"
+                allowfullscreen=""
+                loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"
+              ></iframe>
+            </td>
           </tr>
           <tr>
             <td rowspan="2">9/22</td>
             <td>U1 and U3</td>
             <td>South</td>
             <td>9:30 a.m.</td>
+            <td>
+              <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2975.6987814617733!2d-93.71647898505975!3d41.7701517801426!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x87ee823ab5eb1eb5%3A0x6f680da92115f224!2sS%202nd%20St%2C%20Polk%20City%2C%20IA%2050226%2C%20EE.%20UU.!5e0!3m2!1ses-419!2sar!4v1676681717276!5m2!1ses-419!2sar"
+                width="150"
+                height="100"
+                style="border: 0"
+                allowfullscreen=""
+                loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"
+              ></iframe>
+            </td>
           </tr>
           <tr>
             <td>U2 and U6</td>
             <td>Howard A Yeager</td>
             <td>1:00 a.m.</td>
+            <td>
+              <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2950.2698766737826!2d-87.85606978504094!3d42.31544224591159!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880feccac26b07c5%3A0x8b51fa5d6efe771a!2sHoward%20A.%20Yeager%20School%20(PREK-K)!5e0!3m2!1ses-419!2sar!4v1676681749191!5m2!1ses-419!2sar"
+                width="150"
+                height="100"
+                style="border: 0"
+                allowfullscreen=""
+                loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"
+              ></iframe>
+            </td>
           </tr>
           <tr>
             <td rowspan="1">9/29</td>
             <td>U4 and U5</td>
             <td>Greenbay</td>
             <td>9:30 a.m.</td>
+            <td>
+              <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d182055.15414505827!2d-88.13058002626626!3d44.5231046314734!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8802e2e809b380f3%3A0x6370045214dcf571!2sGreen%20Bay%2C%20Wisconsin%2C%20EE.%20UU.!5e0!3m2!1ses-419!2sar!4v1676681566816!5m2!1ses-419!2sar"
+                width="150"
+                height="100"
+                style="border: 0"
+                allowfullscreen=""
+                loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"
+              ></iframe>
+            </td>
           </tr>
         </table>
         <dl>
