correccion de css

--- a/TAREAS - JORGE MATIAS OTT/show_data.html
+++ b/TAREAS - JORGE MATIAS OTT/show_data.html
@@ -92,5 +92,9 @@
 
       </section>
 </body>
+<footer>
+  <p class="footer">Argentina Programa 4.0 - Mind Hub</p>
+  <p class="footer">Alumno: Jorge Matias Ott</p>    
+</footer>
 </html>
 
