--- a/TAREAS - JORGE MATIAS OTT/registration.html
+++ b/TAREAS - JORGE MATIAS OTT/registration.html
@@ -27,7 +27,7 @@
       <section class="distribucion">
         <nav>
           <a href="./index.html">HOME</a>
-          <a href="./About _MDHL.html">ABOUT</a>
+          <a href="./About_MDHL.html">ABOUT</a>
           <a href="./contact.html">CONTACT</a>
           <a href="./rulesofplay-policies.html">RULES OF PLAY & POLICIES</a>
           <a href="./schedule.htm">SCHEDULE</a>
@@ -38,13 +38,13 @@
               <article>
                 <label class="labelclaves" for="Name">Playe's First Name: </label>
                 <input type="text" name="Name" id="Name" required>
-                <label class="labelclaves" for="">Last Name: </label>
+                <label class="labelclaves" for="Last Name">Last Name: </label>
                 <input type="text" name="Last Name" id="Last-Name" required>
               </article>
               
               <article>
-                <label class="labelclaves" for="Steet Address">Steet Address: </label>
-                <input class="spaninput" type="text" name="Steet Address" id="Steet-Address" required>
+                <label class="labelclaves" for="Street Address">Street Address: </label>
+                <input class="spaninput" type="text" name="Street Address" id="Steet-Address" required>
               </article>
 
               <article>
@@ -56,7 +56,7 @@
 
               <article>
                 <label class="labelclaves" for="Birth Date">Birth Date: (mm/dd/yyyy)</label>
-                <input type="date" name="Birth Date" id="Birth-Date" pattern="\d{2}\/\d{2}\/\d{4}" min="1950-01-01" max="2050-12-31" required>  
+                <input type="date" name="Birth Date" id="Birth-Date" required pattern="\d{4}-\d{2}-\d{2}" min="1950-01-01" max="2050-12-31" required>  
                 <label class="labelclaves" for="Gender">Gender: </label>
                 <label for=""> Female</label>
                 <input type="radio" name="Gender" id="Female" value="Female" required>
