--- a/TAREAS - JORGE MATIAS OTT/contact.html
+++ b/TAREAS - JORGE MATIAS OTT/contact.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="style.css" />
+    <title>CONTACT</title>
+  </head>
   <body>
-    <head>
-      <meta charset="UTF-8" />
-      <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-      <link rel="stylesheet" href="style.css" />
-      <title>CONTACT</title>
-    </head>
     <header>
       <h1>MIGHTY DUCKS HOCKEY LEAGUE</h1>
       <figure>
@@ -27,7 +32,7 @@
     <section class="distribucion">
       <nav>
         <a href="./index.html">HOME</a>
-        <a href="./About _MDHL.html">ABOUT</a>
+        <a href="./About_MDHL.html">ABOUT</a>
         <a class="active" href="#">CONTACT</a>
         <a href="./rulesofplay-policies.html">RULES OF PLAY & POLICIES</a>
         <a href="./schedule.htm">SCHEDULE</a>
