correcciones css y correcciones de tarea 3

--- a/TAREAS - JORGE MATIAS OTT/index.html
+++ b/TAREAS - JORGE MATIAS OTT/index.html
@@ -32,7 +32,7 @@
     <section class="distribucion">
       <nav>
         <a class="active" href="#">HOME</a>
-        <a href="./About_MDHL.html">ABOUT</a>
+        <a href="./about.html">ABOUT</a>
         <a href="./contact.html">CONTACT</a>
         <a href="./rulesofplay-policies.html">RULES OF PLAY & POLICIES</a>
         <a href="./schedule.htm">SCHEDULE</a>
