--- a/TAREAS - JORGE MATIAS OTT/schedule.htm
+++ b/TAREAS - JORGE MATIAS OTT/schedule.htm
@@ -32,7 +32,7 @@
     <section class="distribucion">
       <nav>
         <a href="./index.html">HOME</a>
-        <a href="./About_MDHL.html">ABOUT</a>
+        <a href="./about.html">ABOUT</a>
         <a href="./contact.html">CONTACT</a>
         <a href="./rulesofplay-policies.html">RULES OF PLAY & POLICIES</a>
         <a class="active" href="#">SCHEDULE</a>
@@ -47,8 +47,8 @@
             <th rowspan="1">SEPTEMBER</th>
             <th rowspan="1">Teams</th>
             <th rowspan="1">Location</th>
-            <th cdtspan="1">Times</th>
-            <th cdtspan="1">Map</th>
+            <th rowspan="1">Times</th>
+            <th rowspan="1">Map</th>
           </tr>
           <tr>
             <td rowspan="2">9/01</td>
