--- a/TAREAS - JORGE MATIAS OTT/rulesofplay-policies.html
+++ b/TAREAS - JORGE MATIAS OTT/rulesofplay-policies.html
@@ -27,7 +27,7 @@
     <section class="distribucion">
     <nav>
       <a href="./index.html">HOME</a>
-      <a href="./About_MDHL.html">ABOUT</a>
+      <a href="./about.html">ABOUT</a>
       <a href="./contact.html">CONTACT</a>
       <a class="active" href="#">RULES OF PLAY & POLICIES</a>
       <a href="./schedule.htm">SCHEDULE</a>
